big update: backend complete except tests